--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ PAYPAL_CLIENT_SECRET=ENdcHmVyDonN20HVwu180ni-gtoqZYG0BdJuD4eufbnGtoBPpv1H9Bt_YLL
 PAYPAL_ENVIRONMENT=SANDBOX
 PAYPAL_API=https://api.sandbox.paypal.com
 
-API_KEY=
-PROJECT_ID=
+API_KEY=MwSm8YIoA6uVv1NCoVWU
+PROJECT_ID=d6298eab-7ba7-40cc-9857-4a3d4354ab8d
 RETURN_URL=http://localhost:3000
 
